Changed ScoresMenu class and all tests in ScoresMenuTest pass now